[gd_scene load_steps=3 format=2]

[ext_resource path="res://scene/GUI/UI.gd" type="Script" id=1]
[ext_resource path="res://assets/img/GUI/UI.png" type="Texture" id=2]

[node name="Control" type="Control"]
margin_right = 1440.0
margin_bottom = 1080.0
script = ExtResource( 1 )

[node name="LifeBG3" type="ColorRect" parent="."]
margin_left = 405.0
margin_top = 258.0
margin_right = 487.0
margin_bottom = 337.0
color = Color( 0.196078, 0.235294, 0.223529, 1 )

[node name="LifeBG2" type="ColorRect" parent="."]
margin_left = 262.0
margin_top = 259.0
margin_right = 348.0
margin_bottom = 338.0
color = Color( 0.196078, 0.235294, 0.223529, 1 )

[node name="LifeBG" type="ColorRect" parent="."]
margin_left = 112.0
margin_top = 259.0
margin_right = 211.0
margin_bottom = 343.0
color = Color( 0.196078, 0.235294, 0.223529, 1 )

[node name="LifeFG3" type="ColorRect" parent="."]
margin_left = 405.0
margin_top = 258.0
margin_right = 487.0
margin_bottom = 337.0
color = Color( 0.462745, 0.258824, 0.541176, 1 )

[node name="LifeFG2" type="ColorRect" parent="."]
margin_left = 262.0
margin_top = 259.0
margin_right = 348.0
margin_bottom = 338.0
color = Color( 0.462745, 0.258824, 0.541176, 1 )

[node name="LifeFG" type="ColorRect" parent="."]
margin_left = 112.0
margin_top = 259.0
margin_right = 211.0
margin_bottom = 343.0
rect_pivot_offset = Vector2( 630, -75 )
color = Color( 0.462745, 0.258824, 0.541176, 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
